@@ -38,7 +38,9 @@ def collect_tests():
 @pytest.mark.parametrize('test_name', collect_tests())
 @pytest.mark.parametrize('zoom_text_only', [True, False])
 @pytest.mark.parametrize('zoom_level', [100, 66, 33])
-def test_hints(test_name, zoom_text_only, zoom_level, quteproc):
+@pytest.mark.parametrize('find_implementation', ['javascript', 'python'])
+def test_hints(test_name, zoom_text_only, zoom_level, find_implementation,
+               quteproc):
     file_path = os.path.join(os.path.abspath(os.path.dirname(__file__)),
                              'data', 'hints', 'html', test_name)
     url_path = 'data/hints/html/{}'.format(test_name)
@@ -69,6 +71,7 @@ def test_hints(test_name, zoom_text_only, zoom_level, quteproc):
 
     # setup
     quteproc.send_cmd(':set ui zoom-text-only {}'.format(zoom_text_only))
+    quteproc.set_setting('hints', 'find-implementation', find_implementation)
     quteproc.send_cmd(':zoom {}'.format(zoom_level))
     # follow hint
     quteproc.send_cmd(':hint links normal')
